clang/test/BSC/Negative/Generic/GenericTypeMethods/member_func_error_call/member_func_error_call.cbs
// RUN: %clang_cc1 -verify %s

struct MyStruct<T> {
  T res;
};

T struct MyStruct<T>::foo(struct MyStruct<T> *this, T a) {
  this->res = this->res + a;
  return this->res;
}

int main() {
  struct MyStruct<int> s;
  int res = s->foo(10); // expected-error {{member reference type 'MyStruct<int>' is not a pointer; did you mean to use '.'?}}
  return 0;  
}